[package]
name = "kvs"
version = "0.1.0"
authors = ["kamille <3144148605@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
exitcode = "1.1.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
