[package]
name = "kvs"
version = "0.1.0"
authors = ["kamille <3144148605@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
exitcode = "1.1.2"
snafu = "0.7.0"
walkdir = "2.2.7"
log = "0.4.16"
env_logger = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
readable_byte="0.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
